--- a/dupeit.html
+++ b/dupeit.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="dupeit.css">
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clothing!</title>
+    <title>Find dupes for your favorite designer peices!</title>
 </head>
 
 <body>
+
     <header>
         <!-- Top Menu  -->
         <nav>
@@ -24,20 +21,15 @@
     </header>
     <main class="clearfix">
         <div class="title">
-
+            <h1>Dupe it!</h1>
         </div>
         <section class="article">
             <!-- Introduction about -->
-            <h2>Clothing dupes!</h2>
-            <p>Fashion is constantly changing, so it doesn't make sense to spend a ton on a piece of clothing. Here is a dupe
-                for a Medham Kirchhoff Black Velvet Ophelia Dress!
-                <style>
-                    img:hover {
-                        -webkit-transform: scaleX(-1);
-                        transform: scaleX(-1);
-                    }
-                </style>
-                <img src="4d10c464435b224bde823ea886279bbe.jpg" style="width:300px;height:400px;">
+            <h2>What we're about!</h2>
+            <p>Fashion is all about expressing yourself, and sometimes that can be super expensive. Here at Dupe it! we help
+                you get similar peices without the expensive price tags!
+            </p>
+            <img src="3e1dbdf514d30996f7f1cacdfbb21810.jpg" style="width:500px;height:300px;">
         </section>
 
         <!-- Side bar -->
@@ -62,15 +54,6 @@
             <a href="https://www.facebook.com/">Social</a>
         </div>
     </footer>
-</body>
-
-</html>
-</head>
-
-
-</body>
-
-</html>
 </body>
 
 </html>
