--- a/shoes.html
+++ b/shoes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="dupeit.css">
@@ -10,10 +10,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clothing!</title>
-</head>
+    <title>Shoes!</title>
 
-<body>
+
     <header>
         <!-- Top Menu  -->
         <nav>
@@ -24,20 +23,21 @@
     </header>
     <main class="clearfix">
         <div class="title">
-
+            <h1>Shoes</h1>
         </div>
         <section class="article">
             <!-- Introduction about -->
-            <h2>Clothing dupes!</h2>
-            <p>Fashion is constantly changing, so it doesn't make sense to spend a ton on a piece of clothing. Here is a dupe
-                for a Medham Kirchhoff Black Velvet Ophelia Dress!
-                <style>
-                    img:hover {
-                        -webkit-transform: scaleX(-1);
-                        transform: scaleX(-1);
-                    }
-                </style>
-                <img src="4d10c464435b224bde823ea886279bbe.jpg" style="width:300px;height:400px;">
+            <h2>Designer Shoes</h2>
+            <p>Shoes in general can cost a lot of money, but designer shoes can sure cost a fortune! Here are some affordable
+                dupes for some high end shoes!
+            </p>
+            <style>
+                img:hover {
+                    -webkit-transform: scaleX(-1);
+                    transform: scaleX(-1);
+                }
+            </style>
+            <img src="250605f48b5e45101e43a603dcfa0cfd.jpg" style="width:300px;height:400px;">
         </section>
 
         <!-- Side bar -->
@@ -62,15 +62,6 @@
             <a href="https://www.facebook.com/">Social</a>
         </div>
     </footer>
-</body>
-
-</html>
-</head>
-
-
-</body>
-
-</html>
-</body>
+    </body>
 
 </html>
